[gd_scene load_steps=4 format=3 uid="uid://dieejrp8kpwab"]

[ext_resource type="Script" uid="uid://b0wev2ucctlf4" path="res://empty_grid.gd" id="1_dj0wp"]
[ext_resource type="Texture2D" uid="uid://cab2t8jcn3fv8" path="res://icon.svg" id="1_t3rwh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dj0wp"]
size = Vector2(128, 128)

[node name="EmptyGrid" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_dj0wp")

[node name="SourceU" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 2
position = Vector2(0, -64)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("1_t3rwh")

[node name="SourceR" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 2
position = Vector2(64, 0)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("1_t3rwh")

[node name="SourceD" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 2
position = Vector2(0, 64)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("1_t3rwh")

[node name="SourceL" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 2
position = Vector2(-64, 0)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("1_t3rwh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_dj0wp")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
modulate = Color(1, 1, 1, 0.0431373)
texture = ExtResource("1_t3rwh")
